--- a/src/sass/detail.scss
+++ b/src/sass/detail.scss
@@ -409,6 +409,9 @@
 	width: 100%;
 	height: 62px;
 	background: #f6f7f8;
+	position: sticky;
+	top: 50px;
+	z-index : 100;
 	.stick_con{
 		width: 1200px;
 		height: 62px;
